@@ -1,3 +1,8 @@
+2013-06-27  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: new feature: mmg's windows and dialogs will remember and
+        restore their positions and sizes. Implements #878.
+
 2013-06-26  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: bug fix: AVC/h.264 output module: fixed writing the
